@@ -1,3 +1,9 @@
+Sun Nov 01 21:10:10 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/indexerconnection.py,xappy/unittests/docids.py: Allow a
+	  Xapian document ID to be specified to the add(), replace(), and
+	  delete() methods. 
+
 Sun Nov 01 21:07:32 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* test.py: Skip test modules which depend on missing modules,
